--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
                 padding: 0;
                 margin: 0;
             }
+            #world {
+                position: absolute;
+                width: 100vw;
+                height: 100vh;
+            }
             canvas {
                 position: absolute;
                 width: 100vw;
