--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
         </style>
     </head>
 <body>
-    <div id="world"></div>
+    <div id="world">
+    </div>
     <canvas id="controller"></canvas>
     <script src="./index.js"></script>
 </body>
