--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     </head>
 <body>
     <div id="world">
+        <canvas id="renderer"></canvas>
         <canvas id="controller"></canvas>
     </div>
     <script src="./index.js"></script>
