Wait 100ms for fullscreen

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
             }
             #controller {
                 z-index: 5;
+                width: 100vw;
+                height: 100vh;
             }
             canvas {
                 position: absolute;
