Reworked intro screen

--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,17 @@
                 width: 100vw;
                 height: 100vh;
             }
-            #intro {
+            #introscreen {
                 position: absolute;
                 width: 100vw;
                 height: 100vh;
                 background-color: #444;
                 display: grid;
-                grid-auto-rows: 1fr;
-                grid-template-columns: 1fr;
+                align-items: center;
+                justify-items: center;
+            }
+            #menu {
+                display: grid;
                 align-items: center;
                 justify-items: center;
             }
@@ -40,15 +43,17 @@
                 background-color: #eee;
                 color: #444;
                 z-index: 10;
-                box-shadow: 0 10px 10px #bbb;
+                box-shadow: 0 5px 5px #999;
             }
         </style>
     </head>
 <body>
 
-    <div id="intro">
-        <button id="start">Press to start</button>
-        <button id="fullscreen">Press to go fullscreen</button>
+    <div id="introscreen">
+        <div id="menu">
+            <button id="start">Press to start</button>
+            <button id="fullscreen">Press to go fullscreen</button>
+        </div>    
     </div>
 
     <div id="world">
