Added 3D render layer

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,8 @@
     </div>
 
     <div id="world">
-        <canvas id="renderer"></canvas>
+        <canvas id="renderer3D"></canvas>
+        <canvas id="renderer2D"></canvas>
         <canvas id="controller"></canvas>
     </div>
     <script src="./index.js"></script>
