--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
                 width: 100vw;
                 height: 100vh;
             }
-            #controller {
+            #renderer2D {
                 z-index: 5;
                 width: 100vw;
                 height: 100vh;
@@ -57,9 +57,8 @@
     </div>
 
     <div id="world">
-        <canvas id="renderer3D"></canvas>
         <canvas id="renderer2D"></canvas>
-        <canvas id="controller"></canvas>
+        <canvas id="renderer3D"></canvas>
     </div>
 </body>
 </html>
